fix background image on mobile. Fix some styles

--- a/styles/blocks/textBlock.module.scss
+++ b/styles/blocks/textBlock.module.scss
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     margin: 100px 0;
-    padding: 0 5rem;
+    padding: 0 2rem;
 
     .text {
         width: 100%;
