--- a/styles/post.module.scss
+++ b/styles/post.module.scss
@@ -26,6 +26,9 @@
         .title {
             color: whitesmoke;
             font-size: 3.5rem;
+            padding: 1rem;
+            text-align: center;
+            width: 100%;
         }
 
         .subTitle {
